# Jnotype

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: bernoulli_mixture_model.qmd  gaussian_graphical_learning.qmd
src/baypy/: __init__.py
src/baypy/gibbs/: cluster.py
src/jnotype/: __init__.py  _csp.py  _dirichlet.py  _reparam.py  _utils.py  _variance.py  conditional_bernoulli.py
src/jnotype/_factor_analysis/: __init__.py  _gibbs_backend.py  _inference.py  _simulate.py
src/jnotype/bmm/: __init__.py  _em.py  _gibbs.py
src/jnotype/checks/: __init__.py  _histograms.py  _plots.py  _statistics.py
src/jnotype/datasets/: __init__.py  _download.py
src/jnotype/energy/: .gitignore  Snakefile  __init__.py  _dfd.py  _dfd_ll.py  _gibbs.py  _prior.py  _sampling.py  cluster.json  config.yaml  inference.py  requirements.txt  workflow.py
src/jnotype/exclusivity/: __init__.py  _bernoulli_mixtures.py  _full.py  _independent.py  _rigid.py
src/jnotype/gaussian/: __init__.py  _horseshoe.py  _latent.py  _numeric.py  _spike_and_slab.py
src/jnotype/gibbs/: __init__.py  logreg.py
src/jnotype/latent_gaussian/: __init__.py  _precision.py
src/jnotype/logistic/: __init__.py  _binary_latent.py  _polyagamma.py  _structure.py  (+1 more)
tests/: __init__.py  test_csp.py  test_dirichlet.py  test_install.py  test_reparam.py  test_variance.py
tests/checks/: test_histograms.py  test_statistics.py
tests/conditional_bernoulli/: test_conditional_bernoulli.py
tests/energy/: test_dfd.py  test_prior.py
tests/exclusivity/: test_bernoulli_mixtures.py  test_rigid.py
tests/gibbs/: test_logreg.py
tests/logistic/: test_binary_latent.py  test_logreg.py  test_polyagamma.py  test_structure.py
workflows/: README.md  TCGA_analysis.smk  _benchmark_utils.py  bayes_pyramids.smk  benchmark.smk  false_positives.smk  misspecified.smk  more_observed.smk  presentation.smk
workflows/cbmm/: conditional_bernoulli_mixture_demo.smk  presentation.smk
workflows/energy/: README.md  Snakefile  _dfd_beta.py  _inference.py  _params.py  _utils.py  explore.py  requirements.txt
workflows/exclusivity/: cooccurrence.smk  download_data.smk  gbm.smk  gbm_reproducibility.smk  small_sample.smk
workflows/nonparametric/: 20250417-Dirichlet_process.py  comparison.py  comparison_workflow.smk  comparison_workflow2.smk  comparison_workflow3.smk  comparison_workflow4.smk
workflows/pyramids/: _benchmark_utils.py  simple_tables.smk
(+9 files in other folders)
