[tool.poetry]
name = "baypy"
version = "0.1.0"
description = ""
authors = ["Paweł Czyż"]
readme = "README.md"
packages = [{include = "baypy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pymc = ">=5.0"
numpy = "^1.24.2"
jaxtyping = "^0.2.14"
jax = "^0.4.6"
jaxlib = "^0.4.6"
matplotlib = "^3.7.1"
numpyro = "^0.11.0"
polyagamma = "^1.3.5"
arviz = "^0.15.1"

[tool.poetry.group.dev.dependencies]
interrogate = "^1.5.0"
ruff = "^0.0.253"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
pre-commit = "^3.1.0"
pyright = "^1.1.296"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.report]
fail_under = 85.0

[tool.ruff]
# See https://github.com/google/jaxtyping/blob/main/FAQ.md
# to see why we disabled F722 (or when you see F821)
ignore = ["F722"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "build", "tests"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 2
quiet = false
whitelist-regex = []
color = true


[tool.pyright]
include = ["src", "tests"]
exclude = ["**/node_modules",
    "**/__pycache__",
]

reportMissingImports = true
reportMissingTypeStubs = false
# Store the environment in the repository,
# as otherwise Pyright may be missing dependencies
venvPath = "."
venv = ".venv"
